--- a/.gitignore
+++ b/.gitignore
@@ -42,5 +42,5 @@ app.*.map.json
 /android/app/profile
 /android/app/release
 
-video\ASL_MODEL.mkv.mov
-video\Hanzify.mp4
+video/ASL_MODEL.mkv.mov
+video/Hanzify.mp4
